--- a/app/src/main/res/layout/dialog_partial_date_picker.xml
+++ b/app/src/main/res/layout/dialog_partial_date_picker.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -54,7 +54,8 @@
             <!--
             Keep this as a LinearLayout!
             The order of the 3 columns will be changed dynamically depending on the Locale.
-            Note the viewBindingIgnore="true" as the adding/removing views will not play nice with view binding.
+            Note the viewBindingIgnore="true" as the adding/removing views will not play
+            nice with view binding.
              -->
             <LinearLayout
                 android:id="@+id/dateSelector"
