--- a/app/src/main/res/menu/toolbar_action_add.xml
+++ b/app/src/main/res/menu/toolbar_action_add.xml
@@ -20,12 +20,14 @@
   -->
 
 <!--
-    If we want an outline to be drawn AROUND the icon, then we seem forced to use an "actionLayout"
-    with an icon-Button using the outline style.
+    If we want an outline to be drawn AROUND the icon, then we seem forced to use an
+    "actionLayout" with an icon-Button using the outline style.
 
-    Only alternative is to use an icon with outline builtin... which makes the actual icon to small.
+    Only alternative is to use an icon with outline builtin...
+    which makes the actual icon to small.
 
-    Also: MENU_ACTION_CONFIRM must be used to have "FFBaseDialogFragment" handle some mapping automatically.
+    Also: MENU_ACTION_CONFIRM must be used to have "FFBaseDialogFragment" handle
+    some mapping automatically.
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
