--- a/app/src/main/res/drawable/ic_baseline_reorder_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_reorder_24.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -24,6 +24,7 @@
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!--suppress LongLine -->
     <path
         android:fillColor="@android:color/white"
         android:pathData="M3,15h18v-2L3,13v2zM3,19h18v-2L3,17v2zM3,11h18L21,9L3,9v2zM3,5v2h18L21,5L3,5z" />
