--- a/app/src/main/res/drawable/ic_baseline_start_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_start_24.xml
@@ -25,6 +25,7 @@
         android:tint="?attr/colorControlNormal"
         android:viewportWidth="24"
         android:viewportHeight="24">
+    <!--suppress LongLine -->
     <path
         android:fillColor="@android:color/white"
         android:pathData="M14.59,7.41L18.17,11H6v2h12.17l-3.59,3.59L16,18l6,-6l-6,-6L14.59,7.41zM2,6v12h2V6H2z" />
