--- a/app/src/main/res/drawable/ic_baseline_swap_vert_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_swap_vert_24.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -24,6 +24,7 @@
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!--suppress LongLine -->
     <path
         android:fillColor="@android:color/white"
         android:pathData="M16,17.01V10h-2v7.01h-3L15,21l4,-3.99h-3zM9,3L5,6.99h3V14h2V6.99h3L9,3z" />
