--- a/app/src/main/res/drawable/ic_baseline_view_headline_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_view_headline_24.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -24,6 +24,7 @@
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!--suppress LongLine -->
     <path
         android:fillColor="@android:color/white"
         android:pathData="M4,15h16v-2L4,13v2zM4,19h16v-2L4,17v2zM4,11h16L20,9L4,9v2zM4,5v2h16L20,5L4,5z" />
