--- a/app/src/main/res/drawable/ic_lend_out.xml
+++ b/app/src/main/res/drawable/ic_lend_out.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -24,6 +24,7 @@
     android:tint="?attr/colorControlNormal"
     android:viewportWidth="24"
     android:viewportHeight="24">
+    <!--suppress LongLine -->
     <path
         android:fillColor="@android:color/white"
         android:pathData="M3,5L1,5v16c0,1.1 0.9,2 2,2h16v-2L3,21L3,5z
