--- a/app/src/main/res/values/styles-localized.xml
+++ b/app/src/main/res/values/styles-localized.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -19,6 +19,7 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
+<!--suppress LongLine -->
 <resources>
     <!-- *************************************************************************************** -->
     <!-- translators: create a language specific styles-localized.xml file for these styles,
