--- a/app/src/main/res/values/styles-ratingbar.xml
+++ b/app/src/main/res/values/styles-ratingbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -49,7 +49,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:numStars">5</item>
         <!--  There is no label.
-              Don't add a margin to top/bottom; the height is already 57dp which is 1dp more then actually wanted.
+              Don't add a margin to top/bottom; the height is already 57dp which
+               is 1dp more then actually wanted.
               As this is always used on screens with TIL fields, we use the TIL margins here.
          -->
         <item name="android:layout_marginStart">@dimen/til_margin</item>
