--- a/app/src/main/res/layout-sw800dp/fragment_book_details.xml
+++ b/app/src/main/res/layout-sw800dp/fragment_book_details.xml
@@ -19,6 +19,7 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
+<!--suppress LongLine -->
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
