site names capitalised

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -41,11 +41,11 @@
     <string name="site_google_books" translatable="false">Google Books</string>
     <string name="site_isfdb" translatable="false">ISFDB</string>
     <string name="site_kb_nl" translatable="false">KBNL</string>
-    <string name="site_lastdodo_nl" translatable="false">lastdodo.nl</string>
+    <string name="site_lastdodo_nl" translatable="false">LastDodo</string>
     <string name="site_library_thing" translatable="false">LibraryThing</string>
     <string name="site_open_library" translatable="false">OpenLibrary</string>
-    <string name="site_stripinfo_be" translatable="false">stripinfo.be</string>
-    <string name="site_bedetheque" translatable="false">bedetheque</string>
+    <string name="site_stripinfo_be" translatable="false">StripInfo</string>
+    <string name="site_bedetheque" translatable="false">Bedetheque</string>
 
     <string name="site_calibre" translatable="false">Calibre</string>
 
