--- a/app/src/main/res/xml/preferences_site_bedetheque.xml
+++ b/app/src/main/res/xml/preferences_site_bedetheque.xml
@@ -64,4 +64,12 @@
             app:showSeekBarValue="true"
             />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/pt_maintenance">
+        <Preference
+            android:icon="@drawable/ic_baseline_delete_24"
+            android:key="bedetheque.cache.authors.clear"
+            android:title="@string/option_purge_bedetheque_authors_cache"
+            />
+    </PreferenceCategory>
 </PreferenceScreen>
