--- a/app/src/main/res/layout/booksonbookshelf_group_generic.xml
+++ b/app/src/main/res/layout/booksonbookshelf_group_generic.xml
@@ -43,8 +43,18 @@
         style="@style/Flag.Complete"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/level_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_row_menu"
         tools:ignore="ContentDescription"
+        tools:visibility="visible"
+        />
+
+    <Button
+        android:id="@+id/btn_row_menu"
+        style="@style/Button.More"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
