--- a/app/src/main/res/layout/row_author_work.xml
+++ b/app/src/main/res/layout/row_author_work.xml
@@ -25,54 +25,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/listPreferredItemHeightSmall"
     >
 
-    <ImageButton
-        android:id="@+id/btn_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        style="@style/AuthorWorkCard"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_row_menu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        tools:src="@drawable/ic_baseline_menu_book_24"
-        />
+        >
 
-    <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
-    <TextView
-        android:id="@+id/title"
-        style="@style/Field.BookTitle"
-        android:textIsSelectable="false"
-        app:layout_constraintEnd_toStartOf="@id/year"
-        app:layout_constraintBottom_toTopOf="@id/author"
-        app:layout_constraintStart_toEndOf="@id/btn_type"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@sample/data.json/book/title"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:minHeight="?attr/listPreferredItemHeightSmall"
+            >
 
-    <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
-    <TextView
-        android:id="@+id/year"
-        style="@style/Field.Generic.Inline"
-        android:layout_width="wrap_content"
-        android:textIsSelectable="false"
-        app:layout_constraintBaseline_toBaselineOf="@id/title"
+            <ImageButton
+                android:id="@+id/btn_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription"
+                tools:src="@drawable/ic_baseline_menu_book_24"
+                />
+
+            <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
+            <TextView
+                android:id="@+id/title"
+                style="@style/Field.BookTitle"
+                android:textIsSelectable="false"
+                app:layout_constraintBottom_toTopOf="@id/author"
+                app:layout_constraintEnd_toStartOf="@id/year"
+                app:layout_constraintStart_toEndOf="@id/btn_type"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@sample/data.json/book/title"
+                />
+
+            <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
+            <TextView
+                android:id="@+id/year"
+                style="@style/Field.Generic.Inline"
+                android:layout_width="wrap_content"
+                android:textIsSelectable="false"
+                app:layout_constraintBaseline_toBaselineOf="@id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/title"
+                tools:text="(1951)"
+                />
+
+            <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
+            <TextView
+                android:id="@+id/author"
+                style="@style/Field.Generic"
+                android:textIsSelectable="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/title"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                tools:text="@sample/data.json/author/full_name"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <Button
+        android:id="@+id/btn_row_menu"
+        style="@style/Button.More"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/title"
-        tools:text="(1951)"
+        app:layout_constraintTop_toTopOf="@id/card"
+        tools:visibility="visible"
         />
-
-    <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
-    <TextView
-        android:id="@+id/author"
-        style="@style/Field.Generic"
-        android:textIsSelectable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/title"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        tools:text="@sample/data.json/author/full_name"
-        />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
